fixed video on iphone

--- a/css/cookies-popup.css
+++ b/css/cookies-popup.css
@@ -1,19 +1,24 @@
 #cookiePopup {
   position: fixed;
   bottom: 10px;
-  left: 10px;
-  right: 10px;
   z-index: 9999;
   overflow-x: hidden;
   overflow-y: auto;
   max-height: 100%;
-  padding: 15px 0;
+  padding: 15px 10px;
   font-family: 'Roboto', sans-serif;
   text-align: center;
+  box-sizing: border-box;
   border: 5px solid var(--gray-transparent);
-  border-radius: 5px;
+  border-radius: 10px;
+	-webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
   background-color: #fff;
-  width: auto;
+  width: 60%;
+  right: 50%;
+  -ms-transform: translatex(50%);
+	transform: translatex(50%);
+
 }
 
 #cookiePopup  * {
@@ -28,15 +33,18 @@
 #cookiePopup .cookiePopupBtn {
   position: relative;
   display: inline-block;
-  width: 80%;
+  width: 40%;
   height: 46px;
   padding: 0 30px;
   border: 0;
+  border-radius: 5px;
+	-webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
   font-size: 18px;
   line-height: 44px;
   text-decoration: none;
   vertical-align: middle;
-  margin-right: 15px;
+  margin-right: 5%;
   margin-bottom: 15px;
   cursor: pointer;
   -webkit-appearance: none;    
@@ -64,7 +72,7 @@
   left: 52%;
   z-index: -1;
   border-radius: 5px;
-  background: rgba(20, 66, 141, .3);
+  background: rgba(225, 225, 225, .8);
   content: '';      
 }
 
@@ -77,6 +85,7 @@
 #cookiePopup .cookiePopupBtn:hover,
 #cookiePopup .cookiePopupBtn:focus {
   text-decoration: none;
+  color: var(--gray-transparent);
 }
 
 #cookiePopup .cookiePopupShell {
@@ -98,9 +107,34 @@
 
 #cookiePopup p {
   font-size: 16px;
-  line-height: 20px;
+  line-height: 22px;
   color: var(--gray-transparent);
   font-weight: 400;
+}
+
+@media (max-width: 767px) {
+  #cookiePopup {
+    width: 100%;
+    -ms-transform: none;
+    transform: none;
+    right: auto;
+  }
+  #cookiePopup .cookiePopupBtn {
+    width: 80%;
+    margin-right: 0;
+  }
+}
+
+@media (min-width: 767px) and (max-width: 991px) {
+  #cookiePopup {
+    width: 100%;
+    -ms-transform: none;
+    transform: none;
+    right: auto;
+  }
+  #cookiePopup .cookiePopupBtn {
+    width: 40%;
+  }
 }
 
 /*
